--- a/Moving Average Techniques.ipynb
+++ b/Moving Average Techniques.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811048a8",
+   "id": "1f8c002c",
    "metadata": {},
    "source": [
     "## 2. Some Application \n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd79a945",
+   "id": "425679a5",
    "metadata": {},
    "source": [
     "## 3. Python Programs for SMA and WMA"
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "4570b37e",
+   "execution_count": 175,
+   "id": "a36e6b46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce4a82c",
+   "id": "25cead6f",
    "metadata": {},
    "source": [
     "## 3. Sample Data and Visualization"
@@ -103,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "1711b3d8",
+   "execution_count": 176,
+   "id": "18fcb0e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "5cb54f66",
+   "execution_count": 177,
+   "id": "7da660fa",
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +140,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(range(1, 101), D, label='Noisy Data', linestyle='-', marker='o', color='lightgray')\n",
     "plt.xlabel('time')\n",
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7fd3646",
+   "id": "5f471e7d",
    "metadata": {},
    "source": [
     "## 4. Numerical Examples"
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729a6c6c",
+   "id": "c232be12",
    "metadata": {},
    "source": [
     "### 4.1 Analysis of SMA with different windows"
@@ -168,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "45874a53",
+   "execution_count": 178,
+   "id": "2e736846",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd76848",
+   "id": "bd46b30e",
    "metadata": {},
    "source": [
     "### 4.2 Analysis of WMA with different windows"
@@ -217,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "4feb7d29",
+   "execution_count": 179,
+   "id": "a06ca73d",
    "metadata": {},
    "outputs": [
     {
